2008-10-27  Jim Evins  <evins@snaught.com>

	* data/templates/avery-us-templates.xml:
	* data/templates/misc-iso-templates.xml:
	* data/templates/zweckform-iso-templates.xml:
		Caught up on user submitted templates.
	* AUTHORS:
		Acknowledgements for above templates.

2008-10-23  Jim Evins  <evins@snaught.com>

	* src/label-text.c: (set_font_family):
	* src/object-editor-text-page.c:
	(gl_object_editor_prepare_text_page),
	(gl_object_editor_set_font_family):
	* src/prefs-dialog.c: (construct_object_page),
	(update_object_page_from_prefs):
	* src/ui-property-bar.c: (gl_ui_property_bar_construct),
	(reset_to_default_properties):
	* src/util.c: (gl_util_get_font_family_list):
	* src/util.h:
		Bug #1902275 and Bug #2186214.  Cache font list so that it is not re-created everytime
		the list is requested.
	* src/object-editor-text-page.c: (gl_object_editor_set_font_family):
		Don't change font-family if it hasn't actually changed.

2008-08-29  Jim Evins  <evins@snaught.com>

	* src/file.c: (gl_file_open), (gl_file_save_as):
		Bug #2069668.  Corrected button order in Open and "Save as"
		dialogs.

2008-08-18  Jim Evins  <evins@snaught.com>

	* NEWS:
	* configure.in:
	* docs/libglabels/tmpl/paper.sgml:
		Prepare for 2.2.3 release.

2008-08-17  Jim Evins  <evins@snaught.com>

	* data/dtd/glabels-2.2.dtd:
	* data/templates/paper-sizes.xml:
	* libglabels/db.c: (lgl_db_init):
	* libglabels/paper.c: (lgl_paper_new), (lgl_paper_dup),	(lgl_paper_free):
	* libglabels/paper.h:
	* libglabels/xml-paper.c: (lgl_xml_paper_parse_paper_node):
	* src/print-op.c: (set_page_size):
		Bug #2049431.  Always explicitely set page size.  Added pwg_size field (PWG 5101.1-2002
		size specification) to the libglabels paper database to allow the page size to be
		communicated to GtkPrintOp un-ambiguously.

2008-07-25  Jim Evins  <evins@snaught.com>

	* src/object-editor-size-page.c: (size_reset_cb),
	(gl_object_editor_set_max_size):
		Bug #1993550.  Set size limits based on longest side of label.
