@@ -507,7 +507,20 @@
   </Template>
 
   <!-- =================================================================== -->
-  <!-- DECAdrty DLW-1787: Mailing Labels.                                  -->
+  <!-- DECAdry DLW-1786: Mailing Labels.                                   -->
+  <!-- =================================================================== -->
+  <Template brand="DECAdry" part="DLW-1786" size="A4" description="Mailing Labels">
+    <Meta category="label"/>
+    <Meta category="mail"/>
+    <Label-rectangle id="0" width="105mm" height="39mm" round="0mm" x_waste="0mm" y_waste="0mm">
+      <Markup-margin size="3.175mm"/>
+      <Layout nx="2" ny="7" x0="0mm" y0="12mm" dx="105mm" dy="39mm"/>
+    </Label-rectangle>
+    <Alias brand="DECAdry" part="OLW-4786"/>
+  </Template>
+
+  <!-- =================================================================== -->
+  <!-- DECAdry DLW-1787: Mailing Labels.                                   -->
   <!-- =================================================================== -->
   <Template brand="DECAdry" part="DLW-1787" size="A4" description="Mailing Labels">
     <Meta category="label"/>
